--- a/src/OSK.UML.Exporters.PlantUML/OSK.UML.Exporters.PlantUML.csproj
+++ b/src/OSK.UML.Exporters.PlantUML/OSK.UML.Exporters.PlantUML.csproj
@@ -2,12 +2,8 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
-		<LangVersion>12</LangVersion>
-		<RepositoryUrl>https://github.com/OpenSourceKingdom/OSK.UML</RepositoryUrl>
-		<RepositoryType>git</RepositoryType>
 		<Description>A .NET library that provides a uml diagram exporter that is based on an integration with PlantUML.</Description>
 		<PackageTags>OpenSourceKingdom, OpenSource, OSK, parsing, uml, diagram, export, plant</PackageTags>
-		<Authors>BlankDev117</Authors>
 		<Title>OSK.UML.Exporters.PlantUML</Title>
 	</PropertyGroup>
 
@@ -16,19 +12,20 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
-		<PackageReference Include="OSK.Functions.Outputs.Logging" Version="1.4.0" />
-		<PackageReference Include="OSK.Utilities.JarRunner" Version="0.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="9.0.0" />
+		<PackageReference Include="OSK.Functions.Outputs.Logging" Version="1.5.2" />
+		<PackageReference Include="OSK.Utilities.JarRunner" Version="0.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\OSK.UML\OSK.UML.csproj" />
+		<None Include="..\..\README.md" Pack="true" PackagePath="\"/>
+		<ProjectReference Include="..\OSK.UML\OSK.UML.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <None Update="plantuml-mit-1.2024.5.jar">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </None>
+		<None Update="plantuml-mit-1.2024.5.jar">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 	</ItemGroup>
 
 </Project>
