Remove readme from command line (OSK-6)
Motivation
----
Build failed due to improper readme

Modifications
----
* Remove readme from CommandLine

Result
----
should build

--- a/src/OSK.UML.Exporters.PlantUML/OSK.UML.Exporters.PlantUML.csproj
+++ b/src/OSK.UML.Exporters.PlantUML/OSK.UML.Exporters.PlantUML.csproj
@@ -5,6 +5,7 @@
 		<Description>A .NET library that provides a uml diagram exporter that is based on an integration with PlantUML.</Description>
 		<PackageTags>OpenSourceKingdom, OpenSource, OSK, parsing, uml, diagram, export, plant</PackageTags>
 		<Title>OSK.UML.Exporters.PlantUML</Title>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<PropertyGroup>
